# telegram-bili-feed-helper

./: .gitignore  CLAUDE.md  Dockerfile  Pipfile  README.md  biliparser.py  database.py  docker-compose.yml  feedparser.py  fly.toml  main.py  pyproject.toml  readme.md  requirements-backports.txt  requirements.txt  s.yml  sample.json  stack.env  utils.py
.github/workflows/: ci.yml  deploy.yml  docker-image.yml  fly.yml  heroku.yml
biliparser/: __init__.py  __main__.py  cache.py  credentialFactory.py  database.py  model.py  utils.py
biliparser/cache/: __init__.py
biliparser/channel/: __init__.py
biliparser/channel/discord/: __init__.py  bot.py  channel.py
biliparser/channel/telegram/: __init__.py  bot.py  formatting.py  uploader.py
biliparser/database/: __init__.py
biliparser/model/: audio.py  feed.py  live.py  opus.py  read.py  video.py
biliparser/parser/: __init__.py  audio_parser.py  live_parser.py  opus_parser.py  read_parser.py  reply_parser.py  video_parser.py
biliparser/provider/: __init__.py
biliparser/provider/bilibili/: __init__.py  api.py  audio.py  credential.py  feed.py  live.py  opus.py  read.py  video.py
biliparser/storage/: __init__.py  cache.py  models.py
biliparser/strategy/: __init__.py  audio.py  feed.py  live.py  opus.py  read.py  video.py
biliparser/uploader/: __init__.py  download.py  queue.py
docs/superpowers/plans/: 2026-04-12-channel-provider-refactor.md
telegram_bili_feed_helper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test.py  test_api.py  test_architecture.py  test_bilibili_provider.py  test_bilibili_video_codec.py  test_biliparser.py  test_bv_detection.py  test_channel_abc.py  test_compat.py  test_feed.py  test_feed_to_parsed_content.py  test_feedparser.py  test_format_caption.py  test_integration_bv.py  test_model.py  test_provider_abc.py  test_request_limit.py  test_storage.py  test_uploader.py  test_utils.py
