[project]
authors = [
    {name = "simonsmh"},
]
license = {text = "GPLv3"}
requires-python = "<4.0,>=3.13"
dependencies = [
    "aiomysql",
    "asyncpg",
    "beautifulsoup4",
    "loguru",
    "lxml",
    "pillow",
    "python-telegram-bot[all]",
    "redis",
    "telegraph[aio]",
    "tortoise-orm[accel]",
    "bilibili-api-python",
    "tqdm",
    "async-timeout",
    "orjson",
    "httpx[http2]",
]
name = "telegram-bili-feed-helper"
version = "0.1.0"
description = ""
readme = "README.md"

[project.scripts]
bilifeedbot = "biliparser.__main__:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
